# fmodel-rust-demo

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  test.http
.cargo/: config.toml
.github/workflows/: rust.yml
.sqlx/: query-109ab10341ee60e8ccf50a63f5974aadbc7dc6627784c47f36722bb475a83799.json  query-2e81b1e4bd5952563843357d889f32aaac93c0c3d85a9b3ef00a83907d8e451c.json  query-4980dde7ff963ddbeb2ff96e2a093e8917b6aebf46b651502a79b16b2a78f9c0.json  query-5e7c27f190a78651814eb730d006cf4f529066e3fdcd148469bd7d31a86f21ec.json  query-63856c29f217b694eaf0eef79523d1719036d8d5fbdb3774ad2c7be3eb930b60.json  query-83614613d672b27f07b0db6169f9854d262885d266596b09bba74448acd088ef.json  query-901bd33929044167e908565cc02ef9e4434672c50e5f251a538fbf0615749778.json  query-94fdbfd197ceece11b99223bba1c11fbf96ac7d05473e00dd9b1d15921fb8880.json  query-cb919f7af4c966593fdf90e189d9f2f07337cda6acf9d653b7e355319f0c243a.json  query-df6b84d08259bc1b9ddb487d40a033afd454e5896cab6777929a706921df4077.json  query-e2080006ad3fb46765e5649bffb251bf642ba68b1124df695d22a400b26addd1.json  query-ecf344c50257470a15b80909610cfa2b82e96248515f7770b184db5e19149908.json  query-fdc26da1037b366aa40aa4349e3f09664e42e8f9ffcb53883248b8ffa78da85d.json
migrations/: 20231205192832_event_sourcing.down.sql  20231205192832_event_sourcing.up.sql  20231205193158_event_streaming.down.sql  20231205193158_event_streaming.up.sql  20231205193334_projections.down.sql  20231205193334_projections.up.sql  20231205193437_data.down.sql  20231205193437_data.up.sql
src/: main.rs
src/adapter/: mod.rs
src/adapter/actor/: aggregate_actor.rs  mod.rs
src/adapter/database/: entity.rs  error.rs  mod.rs  queries.rs
src/adapter/event_stream/: mod.rs  saga_stream.rs  view_stream.rs
src/adapter/publisher/: mod.rs  order_action_publisher.rs
src/adapter/repository/: event_repository.rs  mod.rs  order_event_repository.rs  order_view_state_repository.rs  restaurant_event_repository.rs  restaurant_view_state_repository.rs
src/adapter/web/: handler.rs
src/application/: api.rs
src/domain/: api.rs  mod.rs  order_decider.rs  order_saga.rs  order_view.rs  restaurant_decider.rs  restaurant_view.rs
