[package]
name = "fmodel-rust-demo"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Dugalic <ivan.dugalic@fraktalio.com>"]


[dependencies]
# fmodel-rust = "0.7.0"
fmodel-rust = { git = "https://github.com/fraktalio/fmodel-rust.git" }
actix-cors = "0.7.0"
actix-web = "4.9.0"
actix-rt = "2.10.0"
serde = {version = "1.0.216", features = ["derive"]}
serde_json = "1.0.115"
tokio = {version = "1.42.0", features = ["full", "tracing"]}
tokio-util = "0.7.13"
chrono = {version = "0.4.39", features = ["serde"]}
sqlx = {version = "0.8.2", features = ["postgres", "runtime-tokio", "chrono", "uuid", "macros", "json"]}
uuid = { version = "1.11.0", features = ["serde", "v4"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
time = "0.3.37"