[package]
name = "fmodel-rust-demo"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Dugalic <ivan.dugalic@fraktalio.com>"]


[dependencies]
fmodel-rust = "0.8.1"
actix-cors = "0.7.1"
actix-web = "4.11.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.141"
tokio = {version = "1.43.1", features = ["full", "tracing"]}
tokio-util = "0.7.15"
chrono = {version = "0.4.39", features = ["serde"]}
sqlx = {version = "0.8.6", features = ["postgres", "runtime-tokio", "chrono", "uuid", "macros", "json"]}
uuid = { version = "1.17.0", features = ["serde", "v4"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
